made fix with oauth and spacing errors
